--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div>
+  <%= link_to "Sign up now!", signup_path %>
+</div>
   <!-- start flash messaging -->
   <% if flash[:notice] %>
 	<div class="flash_notice">
