--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+    <div class="field">
+    <%= f.label :phone %><br>
+    <%= f.telephone_field :phone %>
+  </div>
   <div class="field">
     <%= f.label :password %><br>
     <%= f.password_field :password %>
