--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,54 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+	margin: 10px;
+}
+
+ul.nav li {
+	display: inline; 
+	padding: 20px 20px 20px 0px;
+	text-decoration: none;
+	font-size: 24px;
+	list-style: none;
+}
+
+li a {
+	text-decoration: none;
+	list-style: none;
+}
+
+.login_info {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	border: 1px solid #ccc;
+	padding: 10px;
+}
+
+#login_title {
+	margin: 20px 0px;
+}
+
+.profile_title {
+	margin: 20px 0px 0px 0px;
+}
+
+.home_title {
+	margin: 10px 0px;
+}
+
+.home_tag {
+	display: inline;
+	float: left;
+	height: 150px;
+	width: 150px;
+	margin: 10px;
+}
+
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
