--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,6 +48,17 @@ li a {
 	margin: 10px;
 }
 
+.field_with_errors input {
+    border: 2px solid red;
+}
+
+.field label {
+	display: block;
+}
+
+.field {
+	margin-bottom: 10px;
+}
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
