--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -12,19 +12,19 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :card_number %><br>
+    <%= f.label :card_number %>
     <%= f.text_field :card_number%>
   </div>
   <div class="field">
-    <%= f.label :card_type %><br>
+    <%= f.label :card_type %>
     <%= f.text_field :card_type %>
   </div>
   <div class="field">
-    <%= f.label :expiration_month %><br>
+    <%= f.label :expiration_month %>
     <%= f.text_field :expiration_month %>
   </div>
     <div class="field">
-    <%= f.label :expiration_year %><br>
+    <%= f.label :expiration_year %>
     <%= f.text_field :expiration_year %>
   </div>
 
