--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,9 +1,26 @@
 <p>
   <strong>Card:</strong>
-  <%= @card.card_number %>
-  <%= @card.card_type %>
-  <%= @card.expiration_month %>
-  <%= @card.expiration_year %>
+
+  <table class="table table-striped">
+	  <thead>
+	    <tr>
+	      <th>Card Number</th>
+	      <th>Card Type</th>
+	      <th>Expiration Month</th>
+	      <th>Expiration Year</th>
+	      <th colspan="3"></th>
+	    </tr>
+	  </thead>
+
+	  <tbody>
+		<tr>
+		  <th><%= @card.card_number %></th>
+	      <th><%= @card.card_type %></th>
+	      <th><%= @card.expiration_month %></th>
+		  <th><%= @card.expiration_year %></th>
+		</tr>
+	  </tbody>
+  </table>
 </p>
 
 <%= link_to 'Back', cards_path %>
