--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <div class="home_title">
 	<h1>Welcome to MyWallet</h1>
-	<p><i>The most popular wallet application on the web!</i></p>
+	<p><i>The newest wallet application on the web!</i></p>
 </div>
 
 <div class="home_tag">
-	<p>Check your balances for all of your cards!</p>
+	<p>Check the balances for each of your cards!</p>
 </div>
 
 <div class="home_tag">
@@ -12,5 +12,5 @@
 </div>
 
 <div class="home_tag">
-	<p>Add as many cards as you want!</p>
+	<p>Add as many cards as you'd like!</p>
 </div>
