--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
 </h2>
 
 <div class="cards">
+  <p>Cards:</p>
   <% @list = @ownedCards %>
   <% if @list.length != 0 %>
 	  <% @list.each do | card | %>
