--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,16 +5,33 @@
 </h2>
 
 <div class="cards">
-  <% @list = @ownedCards %>
-  <% if @list.length != 0 %>
-	  <% @list.each do | card | %>
+  <h3>Cards You Own</h3>
+    <% @list = @ownedCards %>
+    <% if @list.length != 0 %>
     <p>Cards:</p>
-		<%= card.card_number %>
-		<%= card.card_type %>
-		| Expires: <%= card.expiration_month %>/<%= card.expiration_year %><br>
-	  <% end %>
+  	  <% @list.each do | card | %>
+  		<%= card.card_number %>
+  		<%= card.card_type %>
+  		| Expires: <%= card.expiration_month %>/<%= card.expiration_year %>
+      | Balance: $<%= number_with_precision card.balance, :precision => 2 %> | <a href="/cards/<%=card.id %>/share">Share</a> | <a class="btn btn-xs btn-danger" data-method="delete" href="/cards/<%=card.id %>">Delete <span class="glyphicon glyphicon-trash"></span></a> <br>
+  	  <% end %>
+      <h5>Total Balance of your cards: $<%= number_with_precision @total_balance, :precision => 2 %></h5>
+    <% else %>
+    	<h4>You have no owned cards.</h4>
+    <% end %>
+    <hr>
+  <h3>Cards Shared with You</h3>
+  <% @list = @sharedCards %>
+  <% if @list.length != 0 %>
+  <p>Cards:</p>
+    <% @list.each do | card | %>
+    <%= card.card_number %>
+    <%= card.card_type %>
+    | Expires: <%= card.expiration_month %>/<%= card.expiration_year %>
+    | Balance: $<%= number_with_precision card.balance, :precision => 2 %><br>
+    <% end %>
   <% else %>
-  	<h3>You have no cards.</h3>
+    <h4>You have no cards shared with you.</h4>
   <% end %>
 </div>
  	 
