--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -8,7 +8,7 @@
 	      <th>Card Type</th>
 	      <th>Expiration Month</th>
 	      <th>Expiration Year</th>
-	      <!-- <th>Balance</th> -->
+	      <th>Balance</th>
 	      <th colspan="3"></th>
 	    </tr>
 	  </thead>
@@ -19,7 +19,9 @@
 	      <th><%= @card.card_type %></th>
 	      <th><%= @card.expiration_month %></th>
 		  <th><%= @card.expiration_year %></th>
-		  <!-- <th><%= @card.balance %></th> -->
+		  <th><%= @card.balance %></th>
+		  <th>
+  		  </th>
 		</tr>
 	  </tbody>
   </table>
