changed link on card show page & redirected back to user's profile instead of showing all of the cards on the cards_path

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -27,4 +27,4 @@
   </table>
 </p>
 
-<%= link_to 'Back', cards_path %>
+<%= link_to 'Back', {:controller =>'users', :action => 'show', :id => session[:session_user_id]} %>
