added balance to new card form

--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -19,9 +19,13 @@
     <%= f.label :expiration_month %>
     <%= f.text_field :expiration_month %>
   </div>
-    <div class="field">
+  <div class="field">
     <%= f.label :expiration_year %>
     <%= f.text_field :expiration_year %>
+  </div>
+  <div class="field">
+    <%= f.label :balance %>
+    <%= f.text_field :balance %>
   </div>
 
   <div class="actions">
