added padding to the right to fix navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,6 +77,10 @@ li a {
 	padding-top: 100px;
 }
 
+.navbar {
+	padding-right: 200px;
+}
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
