--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -23,11 +23,12 @@
     <%= f.label :expiration_year %>
     <%= f.text_field :expiration_year %>
   </div>
-  <div class="field">
-    <%= f.label :balance %>
-    <%= f.text_field :balance %>
-  </div>
-
+  <% if !@card.new_record? %>
+    <div class="field">
+      <%= f.label :balance %>
+      <%= f.text_field :balance %>
+    </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
